linux man pages - the ultimate goldmine

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
       <nav style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 24px; background: #2c3e50; min-height: 20px; padding: 10px 0;">
         <a href="https://anish7600.github.io/projects" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">Projects</a>
         <a href="https://deepwiki.com/anish7600" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">DeepWiki</a>
+        <a href="https://anish7600.github.io/knowledge-centre" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">Knowledge Center</a>
         <a href="https://anish7600.github.io/technical-writeups" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">Technical Writeups</a>
       </nav>
     </header>
