New tech news section...

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         <a href="https://deepwiki.com/anish7600" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">DeepWiki</a>
         <a href="https://anish7600.github.io/knowledge-centre" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">Knowledge Center</a>
         <a href="https://anish7600.github.io/technical-writeups" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">Technical Writeups</a>
+        <a href="https://anish7600.github.io/tech-news" target="_blank" style="color: #fff; font-weight: bold; font-size: 2rem; margin: 0 20px;">Tech News</a>
       </nav>
     </header>
     <div style="margin: 40px auto 0 auto; max-width: 800px; text-align: left; display: flex; align-items: center; gap: 16px;">
