--- a/tech-writeups/mutation-testing-test-suite-effectiveness/index.html
+++ b/tech-writeups/mutation-testing-test-suite-effectiveness/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anish - mutation-testing-test-suite-effectiveness</title>
+    <title>mutation-testing-test-suite-effectiveness</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/monokai.min.css">
     <style>
