Removed extra sections

--- a/resources/index.html
+++ b/resources/index.html
@@ -254,20 +254,12 @@
                 <hr>
                 <ul class="links-list">
                     <li><a href="https://www.learncpp.com/">Learn C++</a></li>
-                    <li><a href="https://tldp.org/guides.html">Linux Guides (TLDP)</a></li>
-                    <li><a href="http://www.tcpipguide.com/toc.htm">TCP/IP Guide</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=PLE4462C1C306E2EB2">Embedded Systems (YouTube Playlist)</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU">Python Programming (YouTube Playlist)</a></li>
-                    <li><a href="https://runestone.academy/ns/books/published/pythonds/index.html">Data Structures and Algorithms (Python DS)</a></li>
-                    <li><a href="https://www.youtube.com/@CodingWithVerrol/playlists">Golang Programming (YouTube Channel)</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=PL6gx4Cwl9DGBsvRxJJOzG4r4k_zLKrnxl">Android App Development (YouTube Playlist)</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=PLF23494E2820B442B">Metasploit Framework (YouTube Playlist)</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=PL6qa4C74KbMDH6db6_qvQsZunMkMK6PFs">Assembly Language Primer (YouTube Playlist)</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=PL9gza8iek1hKu56dQmMXTR4AcK70Yv0LI">Assembly for Windows Primer (YouTube Playlist)</a></li>
-                    <li><a href="https://www.youtube.com/@HakanKaya-pt9gu/videos">Exploit Research (YouTube Channel)</a></li>
-                    <li><a href="https://www.corelan.be/">Corelan Cybersecurity Research</a></li>
-                    <li><a href="https://www.pluralsight.com/cloud-guru">AWS Cert Prep</a></li>
-                    <li><a href="https://code.tools/">Code Tools</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PLE4462C1C306E2EB2">Embedded Systems</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU">Python Programming</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PLF23494E2820B442B">Metasploit Framework</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PL6qa4C74KbMDH6db6_qvQsZunMkMK6PFs">Assembly Language Primer</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PL9gza8iek1hKu56dQmMXTR4AcK70Yv0LI">Assembly for Windows Primer</a></li>
+                    <li><a href="https://www.pluralsight.com/cloud-guru">AWS certification preparation</a></li>
                 </ul>
             </div>
         </div>
