--- a/index.html
+++ b/index.html
@@ -459,6 +459,8 @@
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
         <a href="#certifications">Certifications</a>
+        <a href="https://anish7610.github.io/tech-writeups">Writeups</a>
+        <a href="https://anish7610.github.io/news">News</a>
     </nav>
 
     <div class="container">
