added missing writeups in the new format

--- a/tech-writeups/index.html
+++ b/tech-writeups/index.html
@@ -129,7 +129,7 @@
         }
 
         .section-content.active {
-            max-height: 800px;
+            max-height: 1200px;
         }
 
         .section-meta {
@@ -487,6 +487,96 @@
                             </a>
                         </li>
                         <li>
+                            <a href="https://anish7610.github.io/tech-writeups/ssl-tls-handshake-packet-capture" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-handshake writeup-icon"></i>
+                                    SSL/TLS Handshake with Packet Capture
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/ssh-key-forwarding-agent-hijacking" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-user-ninja writeup-icon"></i>
+                                    SSH Key Forwarding and Agent Hijacking
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/doh-vs-dot" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-globe writeup-icon"></i>
+                                    DoH vs DoT
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/macsec-enterprise-lan-security" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-ethernet writeup-icon"></i>
+                                    MACSec in Enterprise LAN Security
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/custom-vpn-wireguard-routing-tables" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-route writeup-icon"></i>
+                                    Custom VPN with WireGuard and Routing Tables
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/red-vs-blue-team-mitre-attck" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-chess writeup-icon"></i>
+                                    Red Team vs Blue Team with MITRE ATT&CK
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/tcpip-stack-hardening-zero-trust" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-shield-alt writeup-icon"></i>
+                                    TCP/IP Stack Hardening for Zero Trust
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/secure-boot-measured-boot-uefi" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-microchip writeup-icon"></i>
+                                    Secure Boot and Measured Boot in UEFI
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/ebpf-packet-filtering-kernel-tracing" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-filter writeup-icon"></i>
+                                    eBPF for Packet Filtering and Tracing
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/detecting-lateral-movement-pass-the-hash" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-crosshairs writeup-icon"></i>
+                                    Detecting Lateral Movement and Pass-the-Hash
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
                             <a href="https://anish7610.github.io/tech-writeups/tcp-fragmentation" target="_blank">
                                 <div class="writeup-title">
                                     <i class="fas fa-puzzle-piece writeup-icon"></i>
@@ -563,6 +653,96 @@
                                 <div class="writeup-title">
                                     <i class="fas fa-cubes writeup-icon"></i>
                                     Microservices Testing
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/test-data-management-integration-pipelines" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-database writeup-icon"></i>
+                                    Test Data Management in Integration Pipelines
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/pytest-fixtures-layered-test-abstractions" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-layer-group writeup-icon"></i>
+                                    Layered Test Abstractions with Pytest Fixtures
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/visual-regression-testing-percy-playwright" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-eye writeup-icon"></i>
+                                    Visual Regression Testing with Percy or Playwright
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/contract-testing-with-pact" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-contract writeup-icon"></i>
+                                    Contract Testing with Pact (Consumer/Provider Flow)
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/mutation-testing-test-suite-effectiveness" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-dna writeup-icon"></i>
+                                    Mutation Testing for Test Suite Effectiveness
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/ci-cd-testrail-jira-webhooks" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-webhook writeup-icon"></i>
+                                    CI/CD Integration with TestRail and JIRA using Webhooks
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/chaos-testing-apis-fault-network" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-bolt writeup-icon"></i>
+                                    Chaos Testing APIs with Fault Injection and Network Partitioning
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/test-sharding-parallel-monorepos" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-th writeup-icon"></i>
+                                    Test Sharding and Parallelization in Large Monorepos
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/flaky-test-detection-history-analysis" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-chart-line writeup-icon"></i>
+                                    Flaky Test Detection with Historical Test Analysis
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/synthetic-monitoring-canary-tests" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-heartbeat writeup-icon"></i>
+                                    Synthetic Monitoring and Canary Tests in Production
                                 </div>
                                 <i class="fas fa-external-link-alt writeup-arrow"></i>
                             </a>
@@ -653,6 +833,105 @@
                                 <div class="writeup-title">
                                     <i class="fas fa-terminal writeup-icon"></i>
                                     Simple Shell Implementation
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/linux-process-lifecycle" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-life-ring writeup-icon"></i>
+                                    Linux Process Lifecycle: fork-exec-wait
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/ipc-patterns-shared-memory-pipes-queues" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-share-alt writeup-icon"></i>
+                                    IPC Patterns: Shared Memory, Pipes, and Queues
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/mounting-filesystems-with-mount-and-loop-devices" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-hdd writeup-icon"></i>
+                                    Mounting File Systems with mount and Loop Devices
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/debugging-with-strace-lsof-gdb" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-bug writeup-icon"></i>
+                                    System Debugging with strace, lsof, and gdb
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/multithreaded-scheduling-and-context-switches" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-tasks writeup-icon"></i>
+                                    Multi-threaded Scheduling and Context Switches
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/writing-linux-kernel-module" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-puzzle-piece writeup-icon"></i>
+                                    Writing a Kernel Module in C for Linux
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/user-vs-kernel-threads-performance" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-balance-scale writeup-icon"></i>
+                                    User-space vs Kernel-space Threads: Performance Implications
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/numa-and-memory-pinning" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-sitemap writeup-icon"></i>
+                                    NUMA and Memory Pinning
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/kernel-bypass-networking-dpdk-netmap" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-fast-forward writeup-icon"></i>
+                                    Kernel Bypass Networking: DPDK and Netmap
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/custom-init-pid1-seccomp-filtering" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-cog writeup-icon"></i>
+                                    Custom init System with PID 1 and seccomp Filtering
+                                </div>
+                                <i class="fas fa-external-link-alt writeup-arrow"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://anish7610.github.io/tech-writeups/unix-domain-sockets" target="_blank">
+                                <div class="writeup-title">
+                                    <i class="fas fa-plug writeup-icon"></i>
+                                    Unix Domain Sockets
                                 </div>
                                 <i class="fas fa-external-link-alt writeup-arrow"></i>
                             </a>
