Updated C++ link. Awesomecpp is more comprehensive and in-depth in sub-topics

--- a/resources/index.html
+++ b/resources/index.html
@@ -288,7 +288,7 @@
                 
                 <ul class="links-list">
                     <li class="link-category-cpp">
-                        <a href="https://www.learncpp.com/" target="_blank">
+                        <a href="https://awesomecpp.com/" target="_blank">
                             <div class="link-icon">
                                 <i class="fab fa-cuttlefish"></i>
                             </div>
